--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "debug": "spcx run dist/index.js",
         "prettier": "npx prettier --write .",
         "prepack-zip": "npm ci && npm run build",
-        "pack-zip": "spcx package"
+        "pack-zip": "spcx package",
+        "test": "jest --coverage --passWithNoTests"
     },
     "private": true,
     "dependencies": {
@@ -25,7 +26,10 @@
         "cross-env": "7.0.3",
         "prettier": "^2.3.2",
         "shx": "^0.3.3",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "jest": "^30.2.0",
+        "ts-jest": "^29.4.6",
+        "@types/jest": "^30.0.0"
     },
     "prettier": {
         "printWidth": 120,
@@ -33,5 +37,19 @@
         "tabWidth": 4,
         "semi": false,
         "singleQuote": true
+    },
+    "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "clearMocks": true,
+    "collectCoverage": true,
+    "coverageThreshold": {
+        "global": {
+            "statements": 60,
+            "branches": 50,
+            "functions": 40,
+            "lines": 60
+            }
+        }
     }
 }
